# Coding

./: .gitignore  privacy_metrics.csv
ABS_Renderer_database/: CMakeLists.txt  config.yaml
ABS_Renderer_database/include/: Visualizer.hpp
ABS_Renderer_database/src/: Visualizer.cpp
ABS_Renderer_database_V3/: config.yaml
ABS_Renderer_database_V3/include/: Agent.hpp  Utilities.hpp  Visualizer.hpp
ABS_Renderer_database_V3/src/: PerlinNoise.cpp  Utilities.cpp  Visualizer.cpp
AGBS_Renderer_database_V3/: config.yaml
AGBS_Renderer_database_V3/include/: Quadtree.hpp  Visualizer.hpp
AGBS_Renderer_database_V3/src/: Quadtree.cpp  Visualizer.cpp
Aggregation_Manager/: CMakeLists.txt  config.yaml
Aggregation_Manager/include/: AdaptiveGridBasedSensor.hpp  Agent.hpp  AgentBasedSensor.hpp  AggregationManager.hpp  CollisionGrid.hpp  GridBasedSensor.hpp  Obstacle.hpp  Quadtree.hpp  QuadtreeSnapshot.hpp  Region.hpp  Renderer.hpp  Sensor.hpp  SharedBuffer.hpp  SharedBuffer.tpp  Simulation.hpp  ThreadPool_V2.hpp
Aggregation_Manager/src/: AdaptiveGridBasedSensor.cpp  Agent.cpp  AgentBasedSensor.cpp  AggregationManager.cpp  CollisionGrid.cpp  GridBasedSensor.cpp  Main.cpp  Obstacle.cpp  PathGeneration.cpp  Quadtree.cpp  QuadtreeSnapshot.cpp  Renderer.cpp  Sensor.cpp  Simulation.cpp  ThreadPool_V2.cpp
Data architecture/: buffer  buffer.cpp
Data structure/: calculateTrajectory.py
Data_analysis/: Tilgungsplan.py  analytics.py  analytics_aggregation.py  compound_analysis_aggregation.py  get_quadtree_cell.py  morton.py  plot_ka_spd_qt.py  plot_ka_spd_qt_agg.py  plot_ka_spd_ugd.py  privacy_metrics_analysis.py  real_time_analytics_aggregation.py  sci_mobility.py  spatial_temporal_aggregation.py
Database/: analytics.py  getData.py  modifyData.py  sendCurrentWeatherData.py  sendData.py  setupDatabase.py  test.py
Full Simulation Package/: Agent.cpp  Agent.h  Agent.hpp  AgentBasedSensor.cpp  AgentBasedSensor.hpp  CMakeLists.txt  CollisionAvoidance.cpp  CollisionAvoidance.hpp  CollisionPrediction.cpp  CollisionPrediction.h  Grid.cpp  Grid.h  Grid.hpp  GridBasedSensor.cpp  GridBasedSensor.hpp  Main.cpp  Obstacle.cpp  Obstacle.hpp  PerlinNoise.cpp  Sensor.cpp  Sensor.hpp  Simulation.cpp  Simulation.hpp  Simulation_old.cpp  Utilities.cpp  Utilities.hpp  config.yaml
GBS_Renderer_database/: config.yaml
GBS_Renderer_database/include/: Agent.hpp
GBS_Renderer_database/src/: Main.cpp  Utilities.cpp  Visualizer.cpp
GBS_Renderer_database_V3/: CMakeLists.txt  config.yaml
GBS_Renderer_database_V3/include/: Agent.hpp  Visualizer.hpp
GBS_Renderer_database_V3/src/: Agent.cpp  Visualizer.cpp
GT_Renderer_database/: config.yaml
GT_Renderer_database/include/: Visualizer.hpp
GT_Renderer_database/src/: Main.cpp  Visualizer.cpp
GT_Renderer_database_V3/: CMakeLists.txt  config.yaml
GT_Renderer_database_V3/include/: Logging.hpp  Visualizer.hpp
GT_Renderer_database_V3/src/: Visualizer.cpp
Metal-Simulator/: CMakeLists.txt
Metal-Simulator/src/: main.cpp
Mongo/: CMakeLists.txt  DataPosterA.hpp  DataPosterB.hpp  DataPosterBase.hpp  mongo.cpp  mongodb.cpp
PTU/: requirements.txt
PTU/Old versions/: ptu_control_v4.py  ptu_control_v6.py  ptu_control_v7.py  ptu_control_windows_v1.py
PTU/Old vesions/: ptu_control_v1.py  ptu_control_v2.py  ptu_control_v3.py  ptu_control_v5.py
Quadtree/: config.yaml
Quadtree/include/: AdaptiveGridBasedSensor.hpp  Quadtree.hpp  Sensor.hpp  Visualizer.hpp
Quadtree/src/: AdaptiveGridBasedSensor.cpp  Main.cpp  Quadtree.cpp  Sensor.cpp  Visualizer.cpp
Renderer_database/: CMakeLists.txt  Main.cpp
Renderer_only/: Main.cpp  config.yaml
Scenarios/: Agent.cpp  Agent.hpp  CMakeLists.txt  CollisionAvoidance.cpp  CollisionAvoidance.hpp  Grid.cpp  Grid.hpp  Main.cpp  Simulation.cpp  Simulation.hpp  Simulation_old.cpp  config.yaml
Sensor Mongo/: AgentBasedSensor.cpp  AgentBasedSensor.hpp  CMakeLists.txt  Main.cpp  Sensor.cpp  Sensor.hpp  Simulation.cpp  Simulation.hpp  config.yaml
Simulator/: config.yaml  simulator.cpp  test
SimulatorV2/: CMakeLists.txt  Main.cpp  PerlinNoise.hpp  README.md  ReadMe.md  config.yaml
SimulatorV2 copy/: CMakeLists.txt  Main.cpp  config.yaml
SimulatorV2/include/: Agent.hpp  AgentBasedSensor.hpp  CollisionAvoidance.hpp  CollisionGrid.hpp  GridBasedSensor.hpp  PerlinNoise.hpp  Renderer.hpp  SharedBuffer.hpp  Simulation.hpp  ThreadPool.hpp  Utilities.hpp
SimulatorV2/src/: Agent.cpp  AgentBasedSensor.cpp  GridBasedSensor.cpp  Main.cpp  Renderer.cpp  SharedBuffer.cpp  Simulation.cpp
SimulatorV3/: CMakeLists.txt  README.md  config.yaml
SimulatorV3/include/: AdaptiveGridBasedSensor.hpp  Agent.hpp  AgentBasedSensor.hpp  AggregationManager.hpp  GridBasedSensor.hpp  Quadtree.hpp  Renderer.hpp  Sensor.hpp  SharedBuffer.hpp  Simulation.hpp  Utilities.hpp
SimulatorV3/src/: AdaptiveGridBasedSensor.cpp  Agent.cpp  AgentBasedSensor.cpp  CollisionAvoidance.cpp  CollisionGrid.cpp  GridBasedSensor.cpp  Main.cpp  Quadtree.cpp  Region.cpp  Renderer.cpp  Simulation.cpp  ThreadPool.cpp  Utilities.cpp
SimulatorV3/txt/: config.txt  rename.sh
SimulatorV3/txt/src/: AdaptiveGridBasedSensor.txt  CollisionAvoidance.txt  Quadtree.txt  Renderer.txt  Sensor.txt
Simulator_only/: CMakeLists.txt  Main.cpp  config.yaml
Simulator_only/include/: PerlinNoise.hpp
Simulator_only/src/: Main.cpp  Utilities.cpp
UAM-Simulator/: CMakeLists.txt  config.yaml  grid.frag  grid.vert  object.frag  object.vert  point_line.frag  point_line.vert  sensors.yaml  shadow.frag  shadow.vert
UAM-Simulator/shaders/: grid.frag  grid.vert  object.frag  object.vert  point_line.frag
UAM-Simulator/src/: main.cpp
